--- a/style.css
+++ b/style.css
@@ -1,22 +1,125 @@
-body {
-    background-color: #bd75e2;
-    text-align: center;
-    padding-top: 50px;
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
-button {
-    background-color: #ffffff;
-    color:  #bd75e2;
-    font-size: 24px;
-    font-weight: bold;
-    padding: 20px 40px;
+header h1,a 
+,section h2{
+    font-family: 'Bungee', cursive;
+}
+
+body{
+    font-family: 'Roboto', sans-serif;
+}
+/* MENU SUPERIOR */
+header{
+    padding: 16px 0;
+    background-color: #182c61;
+    color: #ecf0f1;
+}
+header a{
+    color: #ecf0f1;
+    text-decoration: none;
+}
+
+
+header nav li{
+    display: inline;
+    margin-left: 16px;
+    font-size: 18px;
+}
+
+.container{
+    max-width: 1280px;
+    width: 100%;
+    margin: 0 auto;
+}
+
+header .container, section .container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/* CORPO DO SITE */
+.brands-list img{
+    height: 24px;
+}
+
+.brands-list li{
+    display: inline;
+    margin-right: 8px;
+}
+
+section .container{
+    align-items: flex-start;
+}
+
+section{
+    padding: 24px 0;
+    color: #182C61;
+}
+section h2{
+    margin-bottom: 16px;
+}
+
+section p{
+    margin-bottom: 8px;
+}
+
+.store-front{
+    margin-right: 32px;
+}
+
+/* SEÇÃO CONTATO */
+#contact .container{
+    display: block;
+}
+
+.contact-methods{
+    display: flex;
+    justify-content: space-between;
+}
+
+/* form */
+form input,
+form textarea,
+form button{
+    display: block;
+    width: 320px;
+    margin-bottom: 8px;
+    padding: 8px;
+}
+
+form textarea{
+    resize: none;
+    height: 180px;
+}
+
+form button{
+    background-color: #182C61;
+    color: #ecf0f1;
     border: none;
-    border-radius: 50px;
     cursor: pointer;
-    margin: 20px;
 }
 
-button:hover {
-    background-color: #ff9999;
-    color: #ffffff;
+form button:hover{
+    background-color: #314e9e;
+}
+
+input:focus, textarea:focus{
+    outline-color: #182C61;
+}
+
+/* seção nos acompanhe */
+.social-links img{
+    height: 24px;
+}
+.social-links li{
+    display: inline;
+    margin-right: 8px;
+}
+.social_links li a {
+    text-decoration: none;
 }
